--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "private": true,
   "dependencies": {
+    "@angular/animations": "^20.1.0",
     "@angular/common": "^20.0.0",
     "@angular/compiler": "^20.0.0",
     "@angular/core": "^20.0.0",
@@ -20,6 +21,7 @@
     "@fortawesome/fontawesome-svg-core": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@tailwindcss/postcss": "^4.1.11",
+    "aos": "^2.3.4",
     "ionicons": "^8.0.13",
     "postcss": "^8.5.6",
     "rxjs": "~7.8.0",
@@ -30,6 +32,7 @@
     "@angular/build": "^20.0.1",
     "@angular/cli": "^20.0.1",
     "@angular/compiler-cli": "^20.0.0",
+    "@types/aos": "^3.0.7",
     "@types/jasmine": "~5.1.0",
     "daisyui": "^5.0.46",
     "jasmine-core": "~5.7.0",
