fix: better bg image

--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "private": true,
   "dependencies": {
+    "@angular-three/cannon": "^6.0.1",
+    "@angular-three/core": "^6.0.1",
     "@angular/animations": "^20.1.0",
     "@angular/common": "^20.0.0",
     "@angular/compiler": "^20.0.0",
